0.81  2025-10-11
    [Feature]
    - Added enumerate() helper to pair array elements with their zero-based
      index for downstream processing.
    - Documented the helper across README, POD, CLI help, and regression tests.

0.80  2025-10-11
    [Feature]
    - Added merge_objects() helper to flatten arrays of hashes into a single
      object using last-write-wins semantics while ignoring non-object entries.
    - Documented the helper across README, POD, CLI help, and regression tests.

0.79  2025-10-11
    [Feature]
    - Added tail(n) helper to return the last N elements from arrays while
      preserving shorter inputs unchanged.
    - Documented the helper across README, POD, CLI help, and regression tests.

0.78  2025-10-11
    [Feature]
    - Added avg_by(path) helper to compute the arithmetic mean of numeric values
      projected from each array item, mirroring the behavior of sum_by.
    - Documented the helper across README, POD, CLI help, and regression tests.

0.77  2025-10-10
    [Feature]
    - Added variance helper to compute the average squared deviation of numeric
      array values.
    - Documented the helper across README, POD, CLI help, and regression tests.

0.76  2025-10-10
    [Feature]
    - Added mode helper to return the most frequent array value with stable
      tie-breaking based on first appearance.
    - Documented the helper across README, POD, CLI help, and regression tests.

0.75  2025-10-09
    [Feature]
    - Added min_by(path) and max_by(path) helpers to select array elements with
      the smallest or largest projected value.
    - Documented the helpers across README, POD, CLI help, and regression tests.

0.74  2025-10-08
    [Feature]
    - Added pick(key1, key2, ...) helper to build objects that only include the
      requested keys, with array-aware behavior for bulk selection.
    - Documented the helper across README, POD, CLI help, and regression tests.

0.73  2025-10-05
    [Feature]