@@ -52,6 +52,7 @@ t/sort_by.t
 t/sort_unique.t
 t/sum_by.t
 t/tail.t
+t/transpose.t
 t/substr.t
 t/startswith_endswith.t
 t/to_number.t
